--- a/Views/Home/SearchPage.cshtml
+++ b/Views/Home/SearchPage.cshtml
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                 @*COLOR*@
-                <div>
+                <div class="my-4">
                     <div class="text-xl font-bold">COLORS</div>
                     <div class="mt-2 space-y-2">
                         <div class="mb-[0.125rem] mr-4 inline-block min-h-[1.5rem] pl-[1.5rem]">
@@ -111,233 +111,108 @@
                                    type="submit"
                                  
                                    value="Black" />
-                            <label class="inline-block pl-[0.15rem] hover:cursor-pointer"
-                                   for="inlineCheckbox2">
-                                Black
-                            </label>
                         </div>
                         <div class="mb-[0.125rem] mr-4 inline-block min-h-[1.5rem] pl-[1.5rem]">
                             <input class="btn btn-outline-dark"
                                    type="submit"
                                  
-                                   value="option2" />
-                            <label class="inline-block pl-[0.15rem] hover:cursor-pointer"
-                                   for="inlineCheckbox2">
-                                White
-                            </label>
+                                   value="White" />
                         </div>
                         <div class="mb-[0.125rem] mr-4 inline-block min-h-[1.5rem] pl-[1.5rem]">
                             <input class="btn btn-outline-dark"
                                    type="submit"
                                
-                                   value="option2" />
-                            <label class="inline-block pl-[0.15rem] hover:cursor-pointer"
-                                   for="inlineCheckbox2">
-                                Golden
-                            </label>
+                                   value="Golden" />
                         </div>
                         <div class="mb-[0.125rem] mr-4 inline-block min-h-[1.5rem] pl-[1.5rem]">
                             <input class="btn btn-outline-dark"
                                    type="submit"
                                  
-                                   value="option2" />
-                            <label class="inline-block pl-[0.15rem] hover:cursor-pointer"
-                                   for="inlineCheckbox2">
-                                Silver
-                            </label>
+                                   value="Silver" />
                         </div>
                         <div class="mb-[0.125rem] mr-4 inline-block min-h-[1.5rem] pl-[1.5rem]">
                             <input class="btn btn-outline-dark"
                                    type="submit"
                                  
-                                   value="option2" />
-                            <label class="inline-block pl-[0.15rem] hover:cursor-pointer"
-                                   for="inlineCheckbox2">
-                                Purple
-                            </label>
+                                   value="Purple" />
                         </div>
                         <div class="mb-[0.125rem] mr-4 inline-block min-h-[1.5rem] pl-[1.5rem]">
                             <input class="btn btn-outline-dark"
                                    type="submit"
-                                  
-                                   value="option2" />
-                            <label class="inline-block pl-[0.15rem] hover:cursor-pointer"
-                                   for="inlineCheckbox2">
-                                Blue
-                            </label>
+                                   value="Blue" />
                         </div>
                     </div>
                 </div>
                 }
-                @*RATE*@
-                <div>
-                    <div class="text-xl font-bold">RATES</div>
-                    <div class="mt-2 space-y-2">
-                        <div class="mb-[0.125rem] mr-4 inline-block min-h-[1.5rem] pl-[1.5rem]">
-                            <input class="btn btn-outline-dark"
-                                   type="checkbox"
-                                   id="inlineCheckbox2"
-                                   value="option2" />
-                            <label class="inline-block pl-[0.15rem] hover:cursor-pointer"
-                                   for="inlineCheckbox2">
-                                <span class="space-x-3">
-
-                                    <span>5 star</span>
-                                    <span>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                    </span>
-                                </span>
-                            </label>
-                        </div>
-                        <div class="mb-[0.125rem] mr-4 inline-block min-h-[1.5rem] pl-[1.5rem]">
-                            <input class="btn btn-outline-dark"
-                                   type="checkbox"
-                                   id="inlineCheckbox2"
-                                   value="option2" />
-                            <label class="inline-block pl-[0.15rem] hover:cursor-pointer"
-                                   for="inlineCheckbox2">
-
-                                <span class="space-x-3">
-                                    <span>4 star</span>
-                                    <span>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-gray-100"></i>
-                                    </span>
-                                </span>
-                            </label>
-                        </div>
-                        <div class="mb-[0.125rem] mr-4 inline-block min-h-[1.5rem] pl-[1.5rem]">
-                            <input class="btn btn-outline-dark"
-                                   type="checkbox"
-                                   id="inlineCheckbox2"
-                                   value="option2" />
-                            <label class="inline-block pl-[0.15rem] hover:cursor-pointer"
-                                   for="inlineCheckbox2">
-
-                                <span class="space-x-3">
-                                    <span>3 star</span>
-                                    <span>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-gray-100"></i>
-                                        <i class="fa-solid fa-star text-gray-100"></i>
-                                    </span>
-                                </span>
-                            </label>
-                        </div>
-                        <div class="mb-[0.125rem] mr-4 inline-block min-h-[1.5rem] pl-[1.5rem]">
-                            <input class="btn btn-outline-dark"
-                                   type="checkbox"
-                                   id="inlineCheckbox2"
-                                   value="option2" />
-                            <label class="inline-block pl-[0.15rem] hover:cursor-pointer"
-                                   for="inlineCheckbox2">
-
-                                <span class="space-x-3">
-                                    <span>2 star</span>
-                                    <span>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-gray-100"></i>
-                                        <i class="fa-solid fa-star text-gray-100"></i>
-                                        <i class="fa-solid fa-star text-gray-100"></i>
-                                    </span>
-                                </span>
-                            </label>
-                        </div>
-                        <div class="mb-[0.125rem] mr-4 inline-block min-h-[1.5rem] pl-[1.5rem]">
-                            <input class="btn btn-outline-dark"
-                                   type="checkbox"
-                                   id="inlineCheckbox2"
-                                   value="option2" />
-                            <label class="inline-block pl-[0.15rem] hover:cursor-pointer"
-                                   for="inlineCheckbox2">
-                                <span class="space-x-3">
-
-                                    <span>1 star</span>
-                                    <span>
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                        <i class="fa-solid fa-star text-gray-100"></i>
-                                        <i class="fa-solid fa-star text-gray-100"></i>
-                                        <i class="fa-solid fa-star text-gray-100"></i>
-                                        <i class="fa-solid fa-star text-gray-100"></i>
-                                    </span>
-                                </span>
-                            </label>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
 
 
         @*product-list*@
-        <div class="col-span-3">
-            <div class="w-full flex justify-between align-content-between px-4">
-                <p class="text-3xl font-bold">All Results</p>
-                <a href="/Home/SearchPage" class="bg-blue-600 text-light hover:bg-blue-700 py-2 px-3 rounded-md">View all products</a>
+    <div class="col-span-3">
+        <div class="w-full flex justify-between align-content-between px-4">
+            <p class="text-3xl font-bold">All Results</p>
+            <a href="/Home/SearchPage" class="bg-blue-600 text-light hover:bg-blue-700 py-2 px-3 rounded-md">View all products</a>
+        </div>
+
+        @*product-mini-list*@
+    <div class="grid grid-cols-3 gap-4 justify-content-between mx-auto mt-lg-5 px-4">
+
+        @if (Model.Count() == 0)
+        {
+            <div>
+                SORRY, WE CAN NOT FIND ANYTHING YOU NEED
             </div>
-            <div class="grid grid-cols-3 gap-4 justify-content-between mx-auto mt-lg-5 px-4">
-
-                @if (Model.Count() == 0)
+        }
+        else
+        {
+            foreach (var item in Model)
+            {
+                if (item.id_product <= 8)
                 {
-                    <div>
-                        SORRY, WE CAN NOT FIND ANYTHING YOU NEED
-                    </div>
-                }
-                else
-                {
-                    foreach (var item in Model)
-                    {
-                        <div class="flex justify-center text-md">
-                            <div class="block max-w-sm rounded-lg bg-white shadow-lg">
-                                <a href="/Home/Details_Pro/@item.id_product">
-                                    @*<a href="#!">*@
-                                    <img class="rounded-t-lg h-50 mx-auto"
-                                         src="~/wwwroot/Images/Products/@item.images"
-                                         alt="" />
-                                    @*</a>*@
-                                    <div class="p-3 font-medium">
-                                        <div class="flex flex-row justify-between pb-3 border-bottom">
-                                            <p>$@Html.DisplayFor(modelItem => item.price)</p>
-                                            <div class="flex flex-row">
-                                                <p class="px-2">@Html.DisplayFor(modelItem => item.rate)</p>
-                                                <i class="fa-solid fa-star text-warning"></i>
-                                            </div>
-                                        </div>
 
-                                        <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
-                                            @Html.DisplayFor(modelItem => item.names)
-                                        </h5>
-                                        <p class="mb-4   text-neutral-500 font-light">
-                                            Some quick example text to build on the card title and make up the
-                                            bulk of the card's content.
-                                        </p>
 
-                                        <div class="flex flex-row justify-between align-items-center font-semibold">
-                                            @*<a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs" href="/Home/Details_Pro_Seri/@item.id_product_seri">
-                                                    Details
-                                                </a>*@
-                                            @*<a href="#" class="text-blue-600 font-light">Learn More 🡥</a>*@
-                                        </div>
-
+                    <div class="flex justify-center text-md w-full">
+                        <div class="block max-w-sm rounded-lg bg-white shadow-md w-full">
+                            @*<a href="#!">*@
+                            <img class="rounded-t-lg mx-auto object-center"
+                                 style="height: 250px"
+                                 src="~/wwwroot/Images/Products/@item.images"
+                                 alt="" />
+                            @*</a>*@
+                            <div class="p-3 font-medium">
+                                <div class="flex flex-row justify-between pb-3 border-bottom align-items-center">
+                                    <p class="text-2xl">$@Html.DisplayFor(modelItem => item.price)</p>
+                                    <div class="bg-danger py-2 px-3 rounded-md text-white">
+                                        0%
                                     </div>
-                                </a>
+                                </div>
+
+                                <h5 class="mt-4 mb-3 flex leading-tight text-neutral-800 dark:text-neutral-50 justify-between">
+                                    <div class="text-xl">@Html.DisplayFor(modelItem => item.names)</div>
+                                    <div class="flex flex-row">
+                                        <p class="px-2">@Html.DisplayFor(modelItem => item.rate)</p>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                    </div>
+                                </h5>
+                                <div class="my-3 flex text-xs items-center justify-between">
+                                    <div class="text-start">
+                                        <span class="p-2 rounded-full" style="border: 2px solid #0026ff; color: #0026ff">@Html.DisplayFor(modelItem => item.brand)</span>
+                                        <span class="p-2 rounded-full" style="border: 2px solid #ffd800; color: #ffd800 ">@Html.DisplayFor(modelItem => item.color)</span>
+                                    </div>
+
+                                    <div class="">
+                                        <a href="/Home/Details_Pro/@item.id_product" class="p-2 text-md text-blue-600">View More 🡥</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-
-                    }
+                    </div>
                 }
-            </div>
+            }
+        }
         </div>
+    </div>
     </div>
 </main>
 
