--- a/Views/products/Details.cshtml
+++ b/Views/products/Details.cshtml
@@ -5,135 +5,135 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Details</h2>
+<main>
+    <div>
+        <h4>product</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.names)
+            </dt>
 
-<div>
-    <h4>product</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.names)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.names)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.names)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.images)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.images)
-        </dt>
+            <dd>
+                <img src="~/wwwroot/Images/Products/@Html.DisplayFor(model=>model.images)" class="h-10" />
+            </dd>
 
-        <dd>
-            <img src="~/wwwroot/Images/Products/@Html.DisplayFor(model=>model.images)" class="h-10" />
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.price)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.price)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.price)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.price)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.display)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.display)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.display)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.display)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.weights)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.weights)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.weights)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.weights)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.water_resistance)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.water_resistance)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.water_resistance)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.water_resistance)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.operating_system)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.operating_system)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.operating_system)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.operating_system)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.processor)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.processor)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.processor)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.processor)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.battery)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.battery)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.battery)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.battery)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ram)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ram)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ram)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ram)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.quantity)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.quantity)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.quantity)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.quantity)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.rate)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.rate)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.rate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.rate)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.color)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.color)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.color)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.color)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.brand)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.brand)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.brand)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.brand)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.promocode.code)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.promocode.code)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.promocode.code)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.promocode.code)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id_product }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.id_product }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
+</main>
