--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -1,49 +1,73 @@
 ﻿<!DOCTYPE html>
 <html>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>W.REX</title>
-<link rel="stylesheet" href="~/wwwroot/lib/bootstrap/dist/css/bootstrap.min.css" />
-<link rel="stylesheet" href="~/WebApplication1.styles.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/wwwroot/css/styles.css" asp-append-version="true" />
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>W.REX</title>
+    <link rel="stylesheet" href="~/wwwroot/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/wwwroot/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/WebApplication1.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/wwwroot/css/styles.css" asp-append-version="true" />
 
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" />
-<script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
+    <style>
+        input[type=text] {
+            width: 20%;
+            background-color: white;
+            background-position: 10px 10px;
+            background-repeat: no-repeat;
+            -webkit-transition: width 0.4s ease-in-out;
+            transition: width 0.3s ease-in-out;
+        }
+
+            input[type=text]:focus {
+                width: 50%;
+            }
+    </style>
+</head>
 <body class="subpixel-antialiased">
 
     <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
         <button onclick="sidebar_close()" class="w-full text-center py-4">
-            <i class="fa-solid fa-x"></i>
+            <i class="fa-solid fa-xmark fa-spin fa-spin-reverse p-3 rounded-full bg-gray-100 hover:bg-gray-200 text-black"></i>
         </button>
-        <div class="list-unstyled font-medium">
-            <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/users/Index">Dashboard</a>
-            <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/products/Index">Product</a>
-            <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/orders/Index">Orders</a>
-            <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/orders/Waiting">Waiting</a>
-            <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/orders/Request_Cancel">Request Cancel</a>
-            <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/ranks/Index">Ranks</a>
-            <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/promocodes/Index">Promocodes</a>
-            <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/User/Logout">LOGOUT</a>
-
-        </div>
+        <ul class="list-unstyled font-medium">
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer bg-gray-100" style="border-radius: 50px 0 0 50px;"><a href="/Admin/Index">Dashboard</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/products/Index">Product</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Index">Order</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Waiting">Waiting</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Request_Cancel">Request Cancel</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/ranks/Index">Ranks</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/promocodes/Index">Prmocodes</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/User/Logout">Logout</a></li>
+        </ul>
     </div>
 
     <div id="main">
 
-        <div class="bg-gray-100">
-            <button id="openNav" class="text-xl p-3" onclick="sidebar_open()"><i class="fa-solid fa-bars"></i></button>
+        <div class="shadow-sm align-content-center p-2 flex space-x-2">
+            <button id="openNav" class="text-xl p-2" onclick="sidebar_open()">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            @*admin-avatar*@
+            <div class="rounded-full flex items-center pr-8" style="background-color: #f7f7f7">
+                <img class="h-10 w-10 rounded-full mx-2" src="https://i.pinimg.com/564x/64/cf/6f/64cf6f2685b6939f1a9418289c3dd647.jpg" />
+                <p class="text-sm mx-2">John Frow</p>
+            </div>
+            <input type="text" name="search" placeholder="Search" class="h-10 px-3 mx-3 text-sm text-black rounded-full text-black" style="background-color: #f7f7f7">
         </div>
 
-        <div class="w-full mb-lg-5 ">
-            <main role="main" class="pb-3">
+        <div class="w-full mb-lg-5">
+            <main role="main" class="p-3">
                 @RenderBody()
             </main>
         </div>
 
-        <footer class="p-4 bg-white rounded-lg shadow flex justify-between">
+        <footer class="p-3 bg-gray-100 rounded-lg shadow flex justify-between w-full">
             <span class="text-sm text-gray-500 sm:text-center my-2">
                 © 2023. All Rights Reserved.
             </span>
@@ -67,8 +91,8 @@
 
     <script>
         function sidebar_open() {
-            document.getElementById("main").style.marginLeft = "20%";
-            document.getElementById("mySidebar").style.width = "20%";
+            document.getElementById("main").style.marginLeft = "15%";
+            document.getElementById("mySidebar").style.width = "15%";
             document.getElementById("mySidebar").style.display = "block";
             document.getElementById("openNav").style.display = 'none';
         }
@@ -81,7 +105,6 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
