--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -70,6 +70,7 @@
                 <ul class="list-unstyled">
                     <li class="mb-3"><a href="@Url.Action("Index", "Home")" class="py-2 px-3 text-dark hover:italic hover:font-semibold">HOME</a></li>
                     <li class="mb-3"><a href="@Url.Action("About", "Home")" class="py-2 px-3 text-dark hover:italic hover:font-semibold">ABOUT</a></li>
+                    <li class="mb-3"><a href="@Url.Action("SearchPage", "Home")" class="py-2 px-3 text-dark hover:italic hover:font-semibold">EXPLORE</a></li>
                     <li class="mb-3"><a href="@Url.Action("SearchOrderPage", "Home")" class="py-2 px-3 text-dark hover:italic hover:font-semibold">YOUR ORDERS</a></li>
                     <li class="mb-3"> <a href="@Url.Action("Chats","Home")" class="py-2 px-3 text-dark hover:italic hover:font-semibold">CHAT WITH US</a></li>
                     <li class="mb-3"> <a href="@Url.Action("Contact","Home")" class="py-2 px-3 text-dark hover:italic hover:font-semibold">CONTACT</a></li>
